--- a/Hammond-SPA/src/app/app.component.html
+++ b/Hammond-SPA/src/app/app.component.html
@@ -1,6 +1,7 @@
-<<!--The content below is only a placeholder and can be replaced.-->
-<div style="text-align:center">
+<!--The content below is only a placeholder and can be replaced.-->
+<div>
   <h1>
-    Welcome to {{ title }}!
+    Welcome to Hammond
   </h1>
  <app-value></app-value>
+ </div>
