early admin panel work

--- a/Hammond-SPA/src/app/landingpages/admin-landing/admin-landing.component.html
+++ b/Hammond-SPA/src/app/landingpages/admin-landing/admin-landing.component.html
@@ -1,3 +1,13 @@
 <p>
   admin-landing works!
 </p>
+<div class="container">
+  <tabset class="admin-tabset" #adminTabs>
+    <tab heading="events"></tab>
+    <tab heading="assignments"></tab>
+    <tab heading="students">
+      <app-student-list></app-student-list>
+    </tab>
+    <tab heading="volunteers"></tab>
+  </tabset>
+</div>
