student register added

--- a/Hammond-SPA/src/app/landingpages/admin-landing/admin-landing.component.html
+++ b/Hammond-SPA/src/app/landingpages/admin-landing/admin-landing.component.html
@@ -6,7 +6,7 @@
     <tab heading="events"></tab>
     <tab heading="assignments"></tab>
     <tab heading="students">
-      <app-student-list></app-student-list>
+      <app-student-tab></app-student-tab>
     </tab>
     <tab heading="volunteers"></tab>
   </tabset>
