--- a/Hammond-SPA/src/app/landingpages/admin-landing/admin-landing.component.html
+++ b/Hammond-SPA/src/app/landingpages/admin-landing/admin-landing.component.html
@@ -3,11 +3,20 @@
 </p>
 <div class="container">
   <tabset class="admin-tabset" #adminTabs>
-    <tab heading="events"></tab>
-    <tab heading="assignments"></tab>
+    <tab heading="events">
+      <app-events-tab></app-events-tab>
+    </tab>
+
+    <tab heading="assignments">
+      <app-assignment-tab></app-assignment-tab>
+    </tab>
+
     <tab heading="students">
       <app-student-tab></app-student-tab>
     </tab>
-    <tab heading="volunteers"></tab>
+
+    <tab heading="volunteers">
+      <app-volunteers-tab></app-volunteers-tab>
+    </tab>
   </tabset>
 </div>
