--- a/Hammond-SPA/src/app/admin/registrations/student-registration/student-registration.component.html
+++ b/Hammond-SPA/src/app/admin/registrations/student-registration/student-registration.component.html
@@ -5,43 +5,23 @@
     
       <div class="container">
         <div class="row">
-          <div class="form-group col-md-5">
-            <label class="control-label" style="margin-right:10px">Role: </label>
-            <br>
-            
-            
-            <label class="radio-inline">  
-              <input class="mr-1 ml-2" type="radio" value="student" formControlName="role">Student  
-            </label>
-            <br>  
-            <label class="radio-inline ml-2">  
-              <input class="mr-1" type="radio" value="tutor" formControlName="role">Tutor  
-            </label>
-            <br>
-            <label class="radio-inline ml-2">  
-                <input class="mr-1" type="radio" value="mentor" formControlName="role">Mentor  
-            </label>
-            <br>
-            <label class="radio-inline ml-2">
-                <input class="mr-1" type="radio" value="admin" formControlName="role">Admin  
-            </label>  
-          </div>
+          
     
           <div class="col-md-2"></div>
         
-          <div *ngIf="registerForm.value.role == 'student'" class="form-group col-md-5">
+          <div *ngIf="registerForm.value.userRole == 'student'" class="form-group col-md-5">
             <label class="control-label" style="margin-right:10px">Grade:  </label>
             <br>
             <label class="radio-inline">  
-              <input class="mr-1 ml-2" type="radio" value="sophmore" formControlName="position">Sophmore  
+              <input class="mr-1 ml-2" type="radio" value="sophmore" formControlName="studentLevel">Sophmore  
             </label>
             <br>  
             <label class="radio-inline ml-2">  
-              <input class="mr-1" type="radio" value="junior" formControlName="position">Junior  
+              <input class="mr-1" type="radio" value="junior" formControlName="studentLevel">Junior  
             </label>
             <br>
             <label class="radio-inline ml-2">  
-                <input class="mr-1" type="radio" value="senior" formControlName="position">Senior  
+                <input class="mr-1" type="radio" value="senior" formControlName="studentLevel">Senior  
             </label>
           </div>
         </div>
