student tab added functionality

--- a/Hammond-SPA/src/app/admin/registrations/student-registration/student-registration.component.html
+++ b/Hammond-SPA/src/app/admin/registrations/student-registration/student-registration.component.html
@@ -1,4 +1,6 @@
 <div class="container">
+    <i class="fa fa-arrow-circle-left" (click)="backup()"></i>
+
     <form [formGroup]="registerForm" (ngSubmit)="register()">
       <h2 class="text-center text-primary">Register User</h2>
       <hr>
