--- a/Hammond-SPA/src/app/admin/student-list/student-list.component.html
+++ b/Hammond-SPA/src/app/admin/student-list/student-list.component.html
@@ -1,5 +1,6 @@
 
   <div class="container mt-4">
+      <i class="fa fa-arrow-circle-left" (click)="backup()"></i>
     <div class="">
       <div *ngFor="let user of users" class="">
         <app-user-item [user]="user"></app-user-item>
