--- a/Hammond-SPA/src/app/admin/events-tab/events-tab.component.html
+++ b/Hammond-SPA/src/app/admin/events-tab/events-tab.component.html
@@ -1,3 +1,20 @@
-<p>
-  events-tab works!
-</p>
+<div class="container">
+    
+  <div *ngIf="!eventListMode && !eventRegisterMode">
+      <ul>
+
+          <li (click)="listToggle()">View Events List</li>
+          <li (click)="registerToggle()">Create Event</li>
+      
+        </ul>        
+  </div>
+
+  <div *ngIf="eventRegisterMode">
+    <app-event-registration (cancel)="cancelEventRegistration($event)"></app-event-registration>
+  </div>
+
+  <div *ngIf="eventListMode">
+    <app-events-list (cancel)="cancelEventList($event)"></app-events-list>
+  </div>
+  
+</div>
