--- a/Hammond-SPA/src/app/admin/registrations/event-registration/event-registration.component.html
+++ b/Hammond-SPA/src/app/admin/registrations/event-registration/event-registration.component.html
@@ -1,3 +1,4 @@
-<p>
-  event-registration works!
-</p>
+<div class="container">
+  <i class="fa fa-arrow-circle-left" (click)="backup()"></i>
+  <p>Event Register</p>
+</div>
