--- a/Hammond-SPA/src/app/admin/assignment-list/assignment-list.component.html
+++ b/Hammond-SPA/src/app/admin/assignment-list/assignment-list.component.html
@@ -1,4 +1,4 @@
 <div class="container">
   <i class="fa fa-arrow-circle-left" (click)="backup()"></i>
-  <p>Event List</p>
+  <p>Assignment List</p>
 </div>
