--- a/Hammond-SPA/src/app/admin/registrations/student-dropbox/student-dropbox.component.html
+++ b/Hammond-SPA/src/app/admin/registrations/student-dropbox/student-dropbox.component.html
@@ -1,4 +1,8 @@
 <div class="container">
   <i class="fa fa-arrow-circle-left" (click)="backup()"></i>
-  <p>Event List</p>
+
+<p>
+  student-dropbox goes here!
+</p>
 </div>
+
