--- a/Hammond-SPA/src/app/admin/registrations/assigment-registration/assigment-registration.component.html
+++ b/Hammond-SPA/src/app/admin/registrations/assigment-registration/assigment-registration.component.html
@@ -46,5 +46,42 @@
       </label>
     </div>
 
+    <div class="form-group col-md-5">
+      <label class="control-label" style="margin-right:10px">Section:  </label>
+      <br>
+      <label class="radio-inline">  
+        <input class="mr-1 ml-2" type="radio" value="mentor" formControlName="section">Mentoring  
+      </label>
+      <br>  
+      <label class="radio-inline ml-2">  
+        <input class="mr-1" type="radio" value="tutor" formControlName="section">Tutoring  
+      </label>
+    </div>
+
+    <div class="form-group">
+      <input [ngClass]="{'is-invalid': registerForm.get('dateDue').errors
+        && registerForm.get('dateDue').touched}" class="form-control"
+        placeholder="Date Due" formControlName="dateDue" type="text" bsDatepicker>
+        <div class="invalid-feedback" *ngIf="registerForm.get('dateDue').touched
+	        && registerForm.get('dateDue').hasError('required')">Due Date is required
+	      </div>
+    </div>
+
+    <div class="form-group row">
+      <label class="switch">
+        <input type="checkbox"
+        class="form-control"
+        formControlName="assigned">
+        <span class="slider round"></span>
+      </label>
+      Make Assignment Visable to Students
+    </div>
+
+    <div class="form-group text-center">
+      <button class="btn btn-success" type="submit" [disabled]="!registerForm.valid">Register</button>
+    </div>
+
   </form>
 </div>
+
+<p>{{registerForm.value | json}}</p>
