Student landing started

--- a/Hammond-SPA/src/app/landingpages/student-landing/student-landing.component.html
+++ b/Hammond-SPA/src/app/landingpages/student-landing/student-landing.component.html
@@ -1,3 +1,18 @@
 <p>
   student-landing works!
 </p>
+<div class="container">
+  <tabset class="admin-tabset" #studentTabs>
+    <tab heading="My Profile">
+      <app-stud-profile-tab></app-stud-profile-tab>
+    </tab>
+
+    <tab heading="Assignments">
+      <app-stud-assignment-tab></app-stud-assignment-tab>
+    </tab>
+
+    <tab heading="Messages">
+      Messaging Component Here
+    </tab>
+  </tabset>
+</div>
