--- a/Hammond-SPA/src/app/student/stud-assignment-tab/stud-assignment-tab.component.html
+++ b/Hammond-SPA/src/app/student/stud-assignment-tab/stud-assignment-tab.component.html
@@ -1,3 +1,5 @@
-<p>
-  stud-assignment-tab works!
-</p>
+<div class="">
+  <div *ngFor="let assignment of assignments" class="">
+    <p>{{assignment.title}}</p>
+  </div>
+</div>
