--- a/Hammond-SPA/src/app/student/stud-profile-tab/stud-profile-tab.component.html
+++ b/Hammond-SPA/src/app/student/stud-profile-tab/stud-profile-tab.component.html
@@ -1,3 +1,12 @@
 <p>
   stud-profile-tab works!
 </p>
+<p>{{student.firstName}} {{student.lastName}}</p>
+
+<div class="container">
+  <ul>
+    <li>Most Recent ACT Score: {{student.actScore}}</li>
+    <li>Average ACT Score: </li>
+    <li>Next Assignment Due Date:</li>
+  </ul>
+</div>
