assignment tab receiving data

--- a/Hammond-SPA/src/app/landingpages/student-landing/student-landing.component.html
+++ b/Hammond-SPA/src/app/landingpages/student-landing/student-landing.component.html
@@ -8,7 +8,7 @@
     </tab>
 
     <tab heading="Assignments">
-      <app-stud-assignment-tab></app-stud-assignment-tab>
+      <app-stud-assignment-tab [student]="user"></app-stud-assignment-tab>
     </tab>
 
     <tab heading="Messages">
