--- a/Hammond-SPA/src/app/student/stud-assignment-tab/stud-assignment-tab.component.html
+++ b/Hammond-SPA/src/app/student/stud-assignment-tab/stud-assignment-tab.component.html
@@ -1,5 +1,6 @@
 <div class="">
-  <div *ngFor="let assignment of assignments" class="">
-    <p>{{assignment.title}}</p>
+  <div *ngFor="let assignment of assignments">
+    <p>{{assignment.assignment.title}}</p>
   </div>
 </div>
+
