--- a/Hammond-SPA/src/app/student/stud-assignment-detail/stud-assignment-detail.component.html
+++ b/Hammond-SPA/src/app/student/stud-assignment-detail/stud-assignment-detail.component.html
@@ -1,3 +1,10 @@
 <p>
-  stud-assignment-detail works!
+    Due: {{assignment.dateDue}}
+  </p>
+<p>
+  {{assignment.title}}
 </p>
+<p>
+  {{assignment.content}}
+</p>
+
