--- a/Hammond-SPA/src/app/student/stud-assignment-detail/stud-assignment-detail.component.html
+++ b/Hammond-SPA/src/app/student/stud-assignment-detail/stud-assignment-detail.component.html
@@ -1,9 +1,14 @@
-<p>
-    Due: {{assignment.dateDue}}
-  </p>
+
 <p>
   {{assignment.title}}
 </p>
+<p *ngIf="!assignment.completed">
+    Due: {{assignment.dateDue}}
+</p>
+<p *ngIf="assignment.completed">
+  Assignment Completed!
+</p>
+
 <p>
   {{assignment.content}}
 </p>
