--- a/Hammond-SPA/src/app/admin/registrations/student-registration/student-registration.component.html
+++ b/Hammond-SPA/src/app/admin/registrations/student-registration/student-registration.component.html
@@ -2,7 +2,7 @@
     <i class="fa fa-arrow-circle-left" (click)="backup()"></i>
 
     <form [formGroup]="registerForm" (ngSubmit)="register()">
-      <h2 class="text-center text-primary">Register User</h2>
+      <h2 class="text-center text-primary">Register Student</h2>
       <hr>
     
       <div class="container">
