--- a/Hammond-SPA/src/app/users/user-item/user-item.component.html
+++ b/Hammond-SPA/src/app/users/user-item/user-item.component.html
@@ -1,19 +1,22 @@
 <div class="card mb-2">
   <div class="container">
       <div class="card-body">
-          <div class="row">
+          <div [routerLink]="['/users/', user.id]" class="row">
             <div class="col-md-1 col-lg-1">{{user.id}}: </div>
-            <div [routerLink]="['/users/', user.id]"  
+            <div  
             class="link last-name-column col-md-2 col-lg-2">
               {{user.lastName}},
             </div>
-            <div [routerLink]="['/users/', user.id]"
+            <div
             class="link first-name-column col-md-2 col-lg-2">
               {{user.firstName}}
             </div>
-            <div [routerLink]="['/users/', user.id]"
+            <div
             class="link user-name-column col-md-3 col-lg-3">
               {{user.username}}
+            </div>
+            <div *ngIf="user.studentLevel">
+              {{user.studentLevel}}
             </div>
           </div>
         </div>
