--- a/Hammond-SPA/src/app/admin/registrations/volunteer-registration/volunteer-registration.component.html
+++ b/Hammond-SPA/src/app/admin/registrations/volunteer-registration/volunteer-registration.component.html
@@ -26,6 +26,30 @@
         </div>
       </div>
     </div>
+
+    <div class="container">
+      <div class="row">
+        
+  
+        <div class="col-md-2"></div>
+      
+        <div class="form-group col-md-5">
+          <label class="control-label" style="margin-right:10px">Grade:  </label>
+          <br>
+          <label class="radio-inline">  
+            <input class="mr-1 ml-2" type="radio" value="sophmore" formControlName="studentLevel">Sophmore  
+          </label>
+          <br>  
+          <label class="radio-inline ml-2">  
+            <input class="mr-1" type="radio" value="junior" formControlName="studentLevel">Junior  
+          </label>
+          <br>
+          <label class="radio-inline ml-2">  
+              <input class="mr-1" type="radio" value="senior" formControlName="studentLevel">Senior  
+          </label>
+        </div>
+      </div>
+    </div>
     
   
     <div class="form-group">
@@ -125,4 +149,4 @@
   </form>
 </div>
 
-<p>{{registerForm.value}}</p>
+<p>{{registerForm.value | json}}</p>
