--- a/Hammond-SPA/src/app/admin/registrations/group-registration/group-registration.component.html
+++ b/Hammond-SPA/src/app/admin/registrations/group-registration/group-registration.component.html
@@ -1,9 +1,41 @@
 <div class="container">
     <i class="fa fa-arrow-circle-left" (click)="backup()"></i>
   <div class="row">
-      <div class="col-sm-4 col-md-4 col-lg-4">Volunteers</div>
-      <div class="col-sm-4 col-md-4 col-lg-4">Groups</div>
-      <div class="col-sm-4 col-md-4 col-lg-4">Students</div>
+      <div class="col-sm-4 col-md-4 col-lg-4">
+        <ul>
+            <div *ngFor="let user of users" class="">
+                <li (click)="groupUser(user)" *ngIf="user.userRoles[0].role.name == 'Mentor' && user.grouped != true">
+                    {{user.lastName}}, {{user.firstName}}: {{user.userRoles[0].role.name}}
+                </li>
+              </div>
+        </ul>        
+      </div>
+      <div class="col-sm-4 col-md-4 col-lg-4">
+        <ul>
+          <div *ngFor="let user of users" class="">
+              <li (click)="groupUser(user)" *ngIf="user.userRoles[0].role.name == 'Mentor' && user.grouped">
+                  {{user.lastName}}, {{user.firstName}}: {{user.userRoles[0].role.name}}
+              </li>
+            </div>
+        
+          <div *ngFor="let user of users" class="">
+            <li (click)="groupUser(user)" *ngIf="user.userRoles[0].role.name == 'Student' && user.grouped">
+                  {{user.lastName}}, {{user.firstName}}: {{user.userRoles[0].role.name}}
+            </li>
+          </div>
+        </ul>
+        <button [disabled]="!groupHasMent || !groupHasStud" (click)="register()" class="btn btn-success">Register</button>
+      </div>
+      <div class="col-sm-4 col-md-4 col-lg-4">
+        <ul>
+            <div *ngFor="let user of users" class="">
+              <li (click)="groupUser(user)" *ngIf="user.userRoles[0].role.name == 'Student' && user.grouped != true">
+                    {{user.lastName}}, {{user.firstName}}: {{user.userRoles[0].role.name}}
+              </li>
+            </div>
+        </ul>
+          
+      </div>
   </div>
   
 </div>
