front-end group registration tweaks

--- a/Hammond-SPA/src/app/admin/registrations/group-registration/group-registration.component.html
+++ b/Hammond-SPA/src/app/admin/registrations/group-registration/group-registration.component.html
@@ -13,18 +13,18 @@
       <div class="col-sm-4 col-md-4 col-lg-4">
         <ul>
           <div *ngFor="let user of users" class="">
-              <li (click)="groupUser(user)" *ngIf="user.userRoles[0].role.name == 'Mentor' && user.grouped">
+              <li (click)="ungroupUser(user)" *ngIf="user.userRoles[0].role.name == 'Mentor' && user.grouped">
                   {{user.lastName}}, {{user.firstName}}: {{user.userRoles[0].role.name}}
               </li>
             </div>
         
           <div *ngFor="let user of users" class="">
-            <li (click)="groupUser(user)" *ngIf="user.userRoles[0].role.name == 'Student' && user.grouped">
+            <li (click)="ungroupUser(user)" *ngIf="user.userRoles[0].role.name == 'Student' && user.grouped">
                   {{user.lastName}}, {{user.firstName}}: {{user.userRoles[0].role.name}}
             </li>
           </div>
         </ul>
-        <button [disabled]="!groupHasMent || !groupHasStud" (click)="register()" class="btn btn-success">Register</button>
+        <button [disabled]="this.groupToRegister.studentIds.length < 1 || this.groupToRegister.volunteerIds.length < 1" (click)="register()" class="btn btn-success">Register</button>
       </div>
       <div class="col-sm-4 col-md-4 col-lg-4">
         <ul>
