--- a/Hammond-SPA/src/app/admin/registrations/group-registration/group-registration.component.html
+++ b/Hammond-SPA/src/app/admin/registrations/group-registration/group-registration.component.html
@@ -4,8 +4,8 @@
       <div class="col-sm-4 col-md-4 col-lg-4">
         <ul>
             <div *ngFor="let user of users" class="">
-                <li (click)="groupUser(user)" *ngIf="user.userRoles[0].role.name == 'Mentor' && user.grouped != true">
-                    {{user.lastName}}, {{user.firstName}}: {{user.userRoles[0].role.name}}
+                <li (click)="groupUser(user)" *ngIf="user.userRoles[0].role.name == 'Mentor' && user.grouped != true && !user.userRoles[0].user.hasOwnProperty(userGroups)">
+                    {{user.lastName}}, {{user.firstName}}: {{user.userRoles[0].role.name}} => {{user.userRoles[0].user.userGroups[0].groupId}}
                 </li>
               </div>
         </ul>        
@@ -13,13 +13,13 @@
       <div class="col-sm-4 col-md-4 col-lg-4">
         <ul>
           <div *ngFor="let user of users" class="">
-              <li (click)="ungroupUser(user)" *ngIf="user.userRoles[0].role.name == 'Mentor' && user.grouped">
+              <li (click)="ungroupUser(user)" *ngIf="user.userRoles[0].role.name == 'Mentor' && user.grouped && !user.userRoles[0].user.hasOwnProperty(userGroups)">
                   {{user.lastName}}, {{user.firstName}}: {{user.userRoles[0].role.name}}
               </li>
             </div>
         
           <div *ngFor="let user of users" class="">
-            <li (click)="ungroupUser(user)" *ngIf="user.userRoles[0].role.name == 'Student' && user.grouped">
+            <li (click)="ungroupUser(user)" *ngIf="user.userRoles[0].role.name == 'Student' && user.grouped && !user.userRoles[0].user.hasOwnProperty(userGroups)">
                   {{user.lastName}}, {{user.firstName}}: {{user.userRoles[0].role.name}}
             </li>
           </div>
@@ -29,8 +29,8 @@
       <div class="col-sm-4 col-md-4 col-lg-4">
         <ul>
             <div *ngFor="let user of users" class="">
-              <li (click)="groupUser(user)" *ngIf="user.userRoles[0].role.name == 'Student' && user.grouped != true">
-                    {{user.lastName}}, {{user.firstName}}: {{user.userRoles[0].role.name}}
+              <li (click)="groupUser(user)" *ngIf="user.userRoles[0].role.name == 'Student' && user.grouped != true && !user.userRoles[0].user.hasOwnProperty(userGroups)">
+                    {{user.lastName}}, {{user.firstName}}: {{user.userRoles[0].role.name}} => {{user.userRoles[0].user.userGroups[0]}}
               </li>
             </div>
         </ul>
