--- a/Hammond-SPA/src/app/admin/student-list/student-list.component.html
+++ b/Hammond-SPA/src/app/admin/student-list/student-list.component.html
@@ -17,3 +17,5 @@
             previousText="&lsaquo;" nextText="&rsaquo;" firstText="&laquo;" lastText="&raquo;"> 
     </pagination>
   </div>
+
+  <button (click)="loadUsers()">Button</button>
