--- a/Hammond-SPA/src/app/admin/assignment-list/assignment-list.component.html
+++ b/Hammond-SPA/src/app/admin/assignment-list/assignment-list.component.html
@@ -1,4 +1,14 @@
 <div class="container">
   <i class="fa fa-arrow-circle-left" (click)="backup()"></i>
   <p>Assignment List</p>
+  
+    <div *ngFor="let assignment of assignments">
+      <h4>{{assignment.title}}</h4>
+      <ul>
+        <li>Date Due: {{assignment.dateDue}}</li>
+        <li>Student Leveln: {{assignment.studentLevel}}</li>
+        <li>Assigned?: {{assignment.assigned}}</li>
+      </ul>
+      </div>
+
 </div>
