--- a/Hammond-SPA/src/app/landingpages/admin-landing/admin-landing.component.html
+++ b/Hammond-SPA/src/app/landingpages/admin-landing/admin-landing.component.html
@@ -1,8 +1,8 @@
 <br>
 <div class="container">
   <tabset class="admin-tabset" #adminTabs>
-    <tab heading="events">
-      <app-events-tab></app-events-tab>
+    <tab (click)="loadEvents()" heading="events">
+      <app-events-tab [loadedEvents]="evnts"></app-events-tab>
     </tab>
 
     <tab (click)="loadAssignments()" heading="assignments">
