--- a/Hammond-SPA/src/app/admin/assignment-list/assignment-list.component.html
+++ b/Hammond-SPA/src/app/admin/assignment-list/assignment-list.component.html
@@ -1,7 +1,7 @@
 <div class="container">
   <i class="fa fa-arrow-circle-left" (click)="backup()"></i>
   <p>Assignment List</p>
-    <div *ngFor="let assignment of assignments">
+    <div *ngFor="let assignment of loadedAssignments">
       <h4>{{assignment.title}}</h4>
       <ul>
         <li>Date Due: {{assignment.dateDue}}</li>
