--- a/Hammond-SPA/src/app/admin/student-tab/student-tab.component.html
+++ b/Hammond-SPA/src/app/admin/student-tab/student-tab.component.html
@@ -3,6 +3,7 @@
     <div *ngIf="!studentListMode && !studentRegisterMode && !dropBoxMode">
         <ul>
   
+            <!-- <li [routerLink]="['/admin/students']" (click)="listToggle()">View Student List</li> -->
             <li (click)="listToggle()">View Student List</li>
             <li (click)="registerToggle()">Register New Student</li>
             <li (click)="dropBoxToggle()">Upload Student File</li>
@@ -14,8 +15,8 @@
       <app-student-registration (cancelRegister)="cancelStudentRegister($event)"></app-student-registration>
     </div>
 
-    <div *ngIf="studentListMode">
-      <app-student-list (cancelList)="cancelStudentList($event)"></app-student-list>
+    <div (click)="loadStudents()" *ngIf="studentListMode">
+      <app-student-list [pagination]="pagination" [users]="loadedStudents" (cancelList)="cancelStudentList($event)"></app-student-list>
     </div>
 
     <div *ngIf="dropBoxMode">
