--- a/Hammond-SPA/src/app/landingpages/admin-landing/admin-landing.component.html
+++ b/Hammond-SPA/src/app/landingpages/admin-landing/admin-landing.component.html
@@ -9,8 +9,8 @@
       <app-assignment-tab [loadedAssignments]="assignments"></app-assignment-tab>
     </tab>
 
-    <tab heading="students">
-     <app-student-tab></app-student-tab>
+    <tab (click)="loadStudents()" heading="students">
+     <app-student-tab [pagination]="pagination" [loadedStudents]="users"></app-student-tab>
       
     </tab>
 
@@ -19,7 +19,7 @@
     </tab>
 
     <tab (click)="groupLoads()" heading="groups">
-      <app-groups-tab  [loadedUserGroups]="users" [loadedGroups]="groups"></app-groups-tab>
+      <app-groups-tab [loadedUserGroups]="users" [loadedGroups]="groups"></app-groups-tab>
     </tab>
   </tabset>
 </div>
