--- a/Hammond-SPA/src/app/landingpages/admin-landing/admin-landing.component.html
+++ b/Hammond-SPA/src/app/landingpages/admin-landing/admin-landing.component.html
@@ -9,8 +9,8 @@
       <app-assignment-tab [loadedAssignments]="assignments"></app-assignment-tab>
     </tab>
 
-    <tab (click)="loadStudents()" heading="students">
-     <app-student-tab [pagination]="pagination" [loadedStudents]="users"></app-student-tab>
+    <tab heading="students">
+     <app-student-tab ></app-student-tab>
       
     </tab>
 
