assignment list switched to route resolver

--- a/Hammond-SPA/src/app/admin/assignment-tab/assignment-tab.component.html
+++ b/Hammond-SPA/src/app/admin/assignment-tab/assignment-tab.component.html
@@ -3,7 +3,7 @@
   <div *ngIf="!assignmentListMode && !assignmentRegisterMode">
       <ul>
 
-          <li (click)="listToggle()">View Assignments List</li>
+          <li [routerLink]="['/admin/assignments']">View Assignments List</li>
           <li (click)="registerToggle()">Create Assignment</li>
       
         </ul>        
@@ -13,10 +13,10 @@
     <app-assigment-registration (cancel)="cancelRegistration($event)"></app-assigment-registration>
   </div>
 
-  <div *ngIf="assignmentListMode">
+  <!-- <div *ngIf="assignmentListMode">
     <app-assignment-list (cancel)="cancelList($event)" [loadedAssignments]="loadedAssignments"
     (testssss)="eventEmitterTest($event)">
     </app-assignment-list>
-  </div>
+  </div> -->
   
 </div>
