--- a/Hammond-SPA/src/app/landingpages/admin-landing/admin-landing.component.html
+++ b/Hammond-SPA/src/app/landingpages/admin-landing/admin-landing.component.html
@@ -5,8 +5,8 @@
       <app-events-tab [loadedEvents]="evnts"></app-events-tab>
     </tab>
 
-    <tab (click)="loadAssignments()" heading="assignments">
-      <app-assignment-tab [loadedAssignments]="assignments"></app-assignment-tab>
+    <tab heading="assignments">
+      <app-assignment-tab></app-assignment-tab>
     </tab>
 
     <tab heading="students">
