--- a/Hammond-SPA/src/app/admin/student-list/student-list.component.html
+++ b/Hammond-SPA/src/app/admin/student-list/student-list.component.html
@@ -1,6 +1,6 @@
 
   <div class="container mt-4">
-      <i class="fa fa-arrow-circle-left" (click)="backup()"></i>
+      <i class="fa fa-arrow-circle-left" [routerLink]="['/admin']"></i>
     <div class="">
       <form class="form-inline" #form="ngForm" (ngSubmit)="loadUsers()" novalidate>
         <div class="form-group px-2">
